# VirtualBookshelf-django

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
bookshelf/: README.md  manage.py
bookshelf/authentication/: middleware.py
bookshelf/authentication/management/commands/: initadmin.py
bookshelf/books/: models.py  serializers.py  urls.py  views.py
bookshelf/books/migrations/: 0001_initial.py  0002_auto_20220519_0009.py
bookshelf/bookshelf/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
bookshelf/users/: admin.py  models.py  serializers.py  swagger.py  urls.py  views.py
bookshelf/users/migrations/: 0001_initial.py
docker/: entrypoint.sh
